# delaunator-rs

./: Cargo.toml
benches/: bench.rs
examples/: triangulate.rs
src/: elem.rs  hull.rs  iter.rs  lib.rs  mint.rs  point.rs  serde.rs  traits.rs  triangulation.rs  util.rs
tests/: tests.rs
tests/fixtures/: issue5.json
