[package]
name = "delaunator"
version = "0.3.0"
description = "A very fast 2D Delaunay triangulation library."
documentation = "https://docs.rs/delaunator"
repository = "https://github.com/mourner/delaunator-rs"
readme = "README.md"
license = "ISC"
categories = ["algorithms", "data-structures"]
keywords = ["delaunay", "triangulation", "tessellation", "spatial", "geometry"]
authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]
edition = "2018"

[dependencies]
mint = { version = "0.5.6", optional = true }

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"
rand_xorshift = "0.3.0"
serde_json = "1.0.61"

[[bench]]
name = "bench"
harness = false
